--- a/src/index.css
+++ b/src/index.css
@@ -120,7 +120,7 @@ button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
-  background-color: var(--orange);
+  background-color: #A3432F;
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
