--- a/src/components/CommentForm/CommentForm.css
+++ b/src/components/CommentForm/CommentForm.css
@@ -1,11 +1,4 @@
-img{
-    height: 75vmin;
-    width: 60vmin;
-    border: 2px solid black;
-    border-radius: 7px;
-}
-
-.RandomCocktailPage {
+.CommentForm {
     display: block;
     border: 3px solid black;
     border-radius: 15px;
