--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,21 +1,27 @@
+
 nav {
     background-color: #A3432F;
-    height: 100px;
+    height: 140px;
     border-radius: 15px;
     border: 6px solid #3658A3;
     font-size: 35px;
-    display: block;
+    display: flex;
     justify-content: center;
     align-items: center;
+    align-self: center;
     color: black;
     font-family: 'Courgette', cursive;
     font-weight: bold;
     text-decoration: none !important;
 }
 
-body {
-    background-color: #57332C;
-}
+.HomePage {
+    display: flex;
+    /* background-color: #57332C;   */
+    background-image: url("https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80");
+    height: 1000px;
+    width: 1400px;
+}   
 
 .navb {
     color: black !important;
